// Copyright (c) 2022-2023 - for information on the respective copyright owner
// see the NOTICE file and/or the repository at
// https://github.com/catenax-ng/product-esc-backbone-code
//
// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

package escbackbone.ubc;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "escbackbone/ubc/params.proto";
import "escbackbone/ubc/curve.proto";

option go_package = "github.com/catenax/esc-backbone/x/ubcmm/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/catenax/esc-backbone/ubc/params";
  
  }
  
  // Queries a Curve by index.
  rpc Curve (QueryGetCurveRequest) returns (QueryGetCurveResponse) {
    option (google.api.http).get = "/catenax/esc-backbone/ubc/curve";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetCurveRequest {}

message QueryGetCurveResponse {
  Curve Curve = 1 [(gogoproto.nullable) = false];
}

